# diachronia-api

./: README.md  pyproject.toml
src/dariah/: __main__.py  config.py  main.py
src/dariah/models/: __call_dariah_model_service.py  __init__.py  models.py
tests/: test_call_dariah_model_service.py
