[tool.poetry]
name = "dariah"
version = "1.0.0"
description = ""
authors = ["Filip Patyk <fp.patyk@gmail.com>"]
readme = "README.md"
packages = [
    { include = "dariah", from = "src" }
]



[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.11.1"
pytest = "^8.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
exclude ='''(/venv/|/\.venv/|/\.tox/|/\.nox/|/\.eggs/|/\.git/|/\.mypy_cache/|/\.pytest_cache/|/\.vscode/|/__pycache__/|/\.mypy/|/\.pytest)'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_glob = ["*/venv/*", "*/.venv/*", "*/.tox/*", "*/.nox/*", "*/.eggs/*", "*/.git/*", "*/.mypy_cache/*", "*/.pytest_cache/*", "*/.vscode/*", "*/__pycache__/*", "*/.mypy/*", "*/.pytest"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true